# musql

./: .gitignore  Cargo.toml  README.md  key.mapping.properties  pom.xml
.github/workflows/: tests.yml
src/: main.rs  schema.sql  sql.rs  tag.rs  tag_key.rs  tag_key_mapping.json
src/main/java/com/example/musql/: FileEntity.java  FileMetadata.java  FileRepository.java  FileTagRepository.java  MetadataService.java  MusqlApplication.java  MusqlService.java  PersistenceException.java
src/main/java/com/example/musql/core/: FileEntity.java  FileEntityService.java  FileRepository.java  FileTagRepository.java  MetadataService.java  PersistenceException.java
src/main/java/dev/rilling/musql/: FileEntity.java  FileEntityService.java  FileRepository.java  MappingService.java  MetadataService.java  MusqlApplication.java  MusqlProperties.java  MusqlService.java  package-info.java
src/main/java/dev/rilling/musql/core/: FileEntity.java  package-info.java  (+6 more)
src/main/java/org/felixrilling/musql/: MusqlApplication.java
src/main/resources/: application.properties  application.yaml  key.mapping.properties  schema.sql
src/main/resources/db/migration/: V1_0__create_musql_schema.sql  V1_0__create_schema.sql  V2_0__create_musql_schema.sql  V3_0__create_musql_schema.sql
src/test/java/com/example/musql/: BaseIT.java  MusqlApplicationIT.java  MusqlApplicationTests.java
src/test/java/dev/rilling/musql/: BaseIT.java  MetadataServiceTest.java  MusqlApplicationIT.java
src/test/java/org/felixrilling/musql/: BaseIT.java  MusqlApplicationIT.java
src/test/resources/: test.flac  test.txt
(+24 files in other folders)
