[package]
name = "musql"
version = "0.5.0"
authors = ["F. Rilling <contact@rilling.dev>"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/RillingDev/musql"
description = """
Music tags to SQL conversion
"""
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
clap = "4.5.20"
anyhow = "1.0.92"
symphonia = { version = "0.5.4", features = ["all"] }
rusqlite = "0.32.0"
walkdir = "2.5.0"
lazy_static = "1.5.0"
serde_json = "1.0.133"

